salesforce_sfdx/main/default/objects/OSFPE_obj_Potencia__c/OSFPE_obj_Potencia__c.object-meta.xml
<CustomObject>
    <label>Potencia</label>
    <nameField>
        <displayFormat>PO-{0000000000}</displayFormat>
        <label>Nombre de Registro de Potencias</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potencias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>