salesforce_sfdx/main/default/objects/OSFPE_obj_Potencia__c/fields/OSFPE_fld_Fin_de_plazo_de_suministro__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Fin_de_plazo_de_suministro__c</fullName>
    <label>Fin de Plazo de Suministro</label>
    <required>true</required>
    <type>Date</type>
</CustomField>