salesforce_sfdx/main/default/objects/OSFPE_obj_Potencia__c/fields/OSFPE_fld_Numero_de_dias_de_suministro__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Numero_de_dias_de_suministro__c</fullName>
    <formula>OSFPE_fld_Fin_de_plazo_de_suministro__c -  OSFPE_fld_Inicio_de_plazo_de_suministro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Días de Suministro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>