salesforce_sfdx/main/default/objects/OSFPE_obj_Potencia__c/fields/OSFPE_fld_Potencia_contratada_en_HFP__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_Potencia_contratada_en_HFP__c</fullName>
    <label>Potencia Contratada en HFP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>