salesforce_sfdx/main/default/objects/OSFPE_obj_Potencia__c/recordTypes/OSFPE_rt_Potencia_Peru.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Potencia_Peru</fullName>
    <active>true</active>
    <label>Potencia Peru</label>
</RecordType>