salesforce_sfdx/main/default/objects/OSFPE_obj_Potencia__c/validationRules/OSFPE_vr_validaPotencias.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFPE_vr_validaPotencias</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISBLANK( OSFPE_fld_Potencia_contratada_en_HP__c ) ,
  ISBLANK( OSFPE_fld_Potencia_contratada_en_HFP__c ) 
)</errorConditionFormula>
    <errorMessage>Debe ingresar por lo menos una potencia</errorMessage>
</ValidationRule>