salesforce_sfdx/main/default/objects/OSFPE_obj_Potencia__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OSFPE_fld_Oferta_enlazada__c</columns>
    <columns>OSFPE_fld_Potencia_contratada_en_HP__c</columns>
    <columns>OSFPE_fld_Potencia_contratada_en_HFP__c</columns>
    <columns>OSFPE_fld_Inicio_de_plazo_de_suministro__c</columns>
    <columns>OSFPE_fld_Fin_de_plazo_de_suministro__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>